tests/negative/semantic/exception_inherit_non_exception/input.ci
structure Point { float x = 0.0; float y = 0.0; }
structure BadException : Point {}

void main() {
    BadException e = clone BadException;
    throw e;
}
